# glsl_lighting

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  main.c  opengl.h  scene.c  shader.c
data/: shader.vp
